# ping-charging-station

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
client/: package.json
client/src/: main.tsx
client/src/components/: api-location.ts  api-station.ts
client/src/components/charging-station/: ChargingStationDashboard.tsx  ChargingStationList.css
db/migrations/: 20230823095707_locations.sql
migrations/: 20230823095707_create_locations.sql  20230823114712_add_data.sql
server/: Shuttle.toml
server/migrations/: 20230904131152_create_stations.sql
server/src/: handlers.rs
server/src/db/: charging_station.rs  location.rs
server/src/handlers/: charging_station.rs  location.rs
server/src/routes/: api_router.rs
shuttle-backend/: Cargo.toml
shuttle-backend/migrations/: 20230828091328_create_stations.sql  20230904102137_update_stations.sql  20230904122550_create_stations.sql  20230904124721_create_locations.sql
shuttle-backend/src/: db.rs  handlers.rs  main.rs
shuttle-backend/src/db/: charging_station.rs  location.rs
shuttle-backend/src/handlers/: charging_station.rs  location.rs
shuttle-backend/src/models/: charging_station.rs  location.rs
shuttle-backend/src/routes/: api_router.rs
src/: main.rs  routes.rs
src/handlers/: charging_station.rs
src/routes/: api_router.rs  route_all.rs
vercel-frontend/: index.html  package-lock.json  package.json
vercel-frontend/src/: App.tsx  main.tsx
vercel-frontend/src/components/: StationList.css  StationList.tsx  api-location.ts  api-station.ts  api.ts
(+52 files in other folders)
