[package]
name = "ping-charging-station"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
tokio = "1.28.2"
shuttle-shared-db = { version = "0.21.0", features = ["postgres", "sqlx"] } 
sqlx = { version = "0.6.3", default-features = false, features = ["macros", "postgres", "uuid", "chrono", "json", "runtime-tokio-native-tls", "offline"] }
serde = "1.0.180"
uuid = "1.4.1"
chrono = "0.4.26"
async-trait = "0.1"
serde_json = "1.0.104"
shuttle-static-folder = "0.21.0"
tower-http = { version = "0.4.3", features = ["fs", "cors"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
