[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
tokio = {version = "1.29.1", features = ["full"]}
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres", "macros"] }
anyhow = "1.0.72"
postgres = "0.19.5"
validator = { version = "0.15", features = ["derive"] }
shuttle-runtime = "0.24.0"
shuttle-axum = "0.24.0"
shuttle-secrets = "0.24.0"
tower-http = { version = "0.4.0", features = ["cors"] }


